update mypy config

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,13 +1,17 @@
 [mypy]
+python_version = 3.6
 mypy_path = stubs
+warn_incomplete_stub = yes
 warn_redundant_casts = yes
 warn_unused_ignores = yes
-strict_optional = yes
-incremental = yes
 
 [mypy-*]
+follow_imports = error
+follow_imports_for_stubs = yes
+disallow_any_unimported = yes
 disallow_untyped_calls = yes
 disallow_untyped_defs = yes
 check_untyped_defs = yes
 warn_no_return = yes
 warn_return_any = yes
+no_implicit_optional = yes
