--- a/mypy.ini
+++ b/mypy.ini
@@ -5,8 +5,8 @@ warn_incomplete_stub = yes
 warn_redundant_casts = yes
 warn_unused_ignores = yes
 
-[mypy-*]
-follow_imports = error
+[mypy-knitj.*]
+follow_imports = normal
 follow_imports_for_stubs = yes
 disallow_any_unimported = yes
 disallow_untyped_calls = yes
