--- a/Pipfile
+++ b/Pipfile
@@ -10,4 +10,6 @@ flake8 = ">=3.5"
 flake8-bugbear = ">=18.8"
 flake8-comprehensions = ">=1.4"
 flake8-quotes = ">=1.0"
-black = ">=18.3-alpha.0"
+black = ">=18.3a0"
+knitj = {editable = true, path = "."}
+ipykernel = "*"
